--- a/src/ui/pages/home.page/home.page.scss
+++ b/src/ui/pages/home.page/home.page.scss
@@ -9,6 +9,9 @@
     height: 100%;
     overflow-y: scroll;
     background-color: $page-background;
+    @include mq.mq(mobile-portrait) {
+        overflow: hidden;
+    }
     .homeHeader {
         @extend %page-header;
         > .control {
@@ -45,5 +48,12 @@
     }
     >.collectionGrid {
         @extend %item-grid;
+        @include mq.mq(mobile-portrait) {
+            overflow-y: scroll;
+            box-sizing: border-box;
+            margin: 0;
+            padding: 16px;
+            height: calc(100% - 130px);
+        }
     }
 }
